- Enable XML documentation generation for sharpmake assemblies, except application, samples and unit-tests - Fix some occurences of invalid xml comments - Disable a couple of warnings so that they are not treated as errors: sharpmake lacks *a lot* of documentation TODO: reactivate and fix them

--- a/Sharpmake.Generators/Sharpmake.Generators.csproj
+++ b/Sharpmake.Generators/Sharpmake.Generators.csproj
@@ -19,10 +19,12 @@
     <Optimize>false</Optimize>
     <OutputPath>..\bin\debug</OutputPath>
     <IntermediateOutputPath>obj\anycpu\debug</IntermediateOutputPath>
+    <DocumentationFile>..\bin\Debug\Sharpmake.Generators.xml</DocumentationFile>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <WarningLevel>4</WarningLevel>
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
     <Prefer32Bit>false</Prefer32Bit>
+    <NoWarn>1570,1591</NoWarn>
     <LangVersion>6</LangVersion>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
@@ -32,10 +34,12 @@
     <Optimize>true</Optimize>
     <OutputPath>..\bin\release</OutputPath>
     <IntermediateOutputPath>obj\anycpu\release</IntermediateOutputPath>
+    <DocumentationFile>..\bin\Release\Sharpmake.Generators.xml</DocumentationFile>
     <DefineConstants>TRACE</DefineConstants>
     <WarningLevel>4</WarningLevel>
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
     <Prefer32Bit>false</Prefer32Bit>
+    <NoWarn>1570,1591</NoWarn>
     <LangVersion>6</LangVersion>
   </PropertyGroup>
   <ItemGroup>
