Add support for clang on win64, both for MSBuild and FastBuild - New utility methods GetDefaultLLVMInstallDir and GetClangVersionFromLLVMInstallDir - First step in includes management refactoring: their path conversion is now handled directly by the Vcxproj and Bff generators. In the end, they will not be considered "Options" - Remove GenericObjectListBeginSection from BffTemplate, redundant - [API Change!] CConfigName and CppConfigName are now methods that receive the conf object, to get more fine grain control over the name

--- a/Sharpmake.Platforms/Sharpmake.CommonPlatforms/Sharpmake.CommonPlatforms.csproj
+++ b/Sharpmake.Platforms/Sharpmake.CommonPlatforms/Sharpmake.CommonPlatforms.csproj
@@ -59,6 +59,7 @@
     <Compile Include="Linux\LinuxPlatform.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Windows\BaseWindowsPlatform.cs" />
+    <Compile Include="Windows\ClangForWindowsSettings.cs" />
     <Compile Include="Windows\Win32Platform.cs" />
     <Compile Include="Windows\Win64EnvironmentVariableResolver.cs" />
     <Compile Include="Windows\Win64Platform.cs" />
