--- a/Sharpmake/Sharpmake.csproj
+++ b/Sharpmake/Sharpmake.csproj
@@ -18,7 +18,8 @@
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
     <OutputPath>..\bin\debug</OutputPath>
-    <IntermediateOutputPath>obj\anycpu\debug</IntermediateOutputPath>
+    <IntermediateOutputPath>..\tmp\obj\sharpmake\debug</IntermediateOutputPath>
+    <BaseIntermediateOutputPath>..\tmp\obj\Sharpmake\Debug</BaseIntermediateOutputPath>
     <DocumentationFile>..\bin\Debug\Sharpmake.xml</DocumentationFile>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <WarningLevel>4</WarningLevel>
@@ -34,7 +35,8 @@
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>..\bin\release</OutputPath>
-    <IntermediateOutputPath>obj\anycpu\release</IntermediateOutputPath>
+    <IntermediateOutputPath>..\tmp\obj\sharpmake\release</IntermediateOutputPath>
+    <BaseIntermediateOutputPath>..\tmp\obj\Sharpmake\Release</BaseIntermediateOutputPath>
     <DocumentationFile>..\bin\Release\Sharpmake.xml</DocumentationFile>
     <DefineConstants>TRACE</DefineConstants>
     <WarningLevel>4</WarningLevel>
