Fixes the csproj generation to match Visual Studio's output.
* Sharpmake no longer generates a superfluous newline at the end of a file.
* Generated csproj and vcxproj only escape what needs to be, such as <, > and & symbols.
* Saving a generated csproj should no longer display a reload prompt to the user.

--- a/Sharpmake.Generators/Sharpmake.Generators.csproj
+++ b/Sharpmake.Generators/Sharpmake.Generators.csproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" ToolsVersion="14.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -98,6 +98,7 @@
     <Compile Include="VisualStudio\UserFile.cs" />
     <Compile Include="VisualStudio\Vcxproj.Template.cs" />
     <Compile Include="VisualStudio\Vcxproj.cs" />
+    <Compile Include="XmlFileGenerator.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Sharpmake\Sharpmake.csproj">
