--- a/Sharpmake.Generators/Sharpmake.Generators.csproj
+++ b/Sharpmake.Generators/Sharpmake.Generators.csproj
@@ -18,8 +18,8 @@
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
     <OutputPath>..\bin\debug</OutputPath>
-    <IntermediateOutputPath>..\tmp\obj\sharpmake.generators\debug</IntermediateOutputPath>
-    <BaseIntermediateOutputPath>..\tmp\obj\Sharpmake.Generators\Debug</BaseIntermediateOutputPath>
+    <IntermediateOutputPath>..\tmp\obj\debug\sharpmake.generators</IntermediateOutputPath>
+    <BaseIntermediateOutputPath>..\tmp\obj\Debug\Sharpmake.Generators</BaseIntermediateOutputPath>
     <DocumentationFile>..\bin\Debug\Sharpmake.Generators.xml</DocumentationFile>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <WarningLevel>4</WarningLevel>
@@ -34,8 +34,8 @@
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>..\bin\release</OutputPath>
-    <IntermediateOutputPath>..\tmp\obj\sharpmake.generators\release</IntermediateOutputPath>
-    <BaseIntermediateOutputPath>..\tmp\obj\Sharpmake.Generators\Release</BaseIntermediateOutputPath>
+    <IntermediateOutputPath>..\tmp\obj\release\sharpmake.generators</IntermediateOutputPath>
+    <BaseIntermediateOutputPath>..\tmp\obj\Release\Sharpmake.Generators</BaseIntermediateOutputPath>
     <DocumentationFile>..\bin\Release\Sharpmake.Generators.xml</DocumentationFile>
     <DefineConstants>TRACE</DefineConstants>
     <WarningLevel>4</WarningLevel>
