Sharpmake can now take compilation symbols as arguments. It also injects its current version as a symbol. Added `PreprocessorConditionParser` to parse the conditions. Added `IParsingFlowParser` to dictacte Sharpmake what lines to parse. Added some tests in SharpmakeFileParserTest.cs
Removed useless `ShouldParseCurrentLine` checks in Assembler. Only Sharpmake can define `_SHARPMAKE` symbols.

--- a/Sharpmake/Sharpmake.csproj
+++ b/Sharpmake/Sharpmake.csproj
@@ -106,6 +106,7 @@
     <Compile Include="PlatformEventArgs.cs" />
     <Compile Include="PlatformExceptions.cs" />
     <Compile Include="PlatformRegistry.cs" />
+    <Compile Include="PreprocessorConditionParser.cs" />
     <Compile Include="Project.Configuration.cs" />
     <Compile Include="Project.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
