--- a/samples/CSharpVsix/reference/projects/csharpvsix/CSharpVsix.vs2015.v4_5.csproj
+++ b/samples/CSharpVsix/reference/projects/csharpvsix/CSharpVsix.vs2015.v4_5.csproj
@@ -10,7 +10,7 @@
     <RootNamespace>CSharpVsix</RootNamespace>
     <AssemblyName>CSharpVsix</AssemblyName>
     <SignAssembly>true</SignAssembly>
-    <AssemblyOriginatorKeyFile>Key.snk</AssemblyOriginatorKeyFile>
+    <AssemblyOriginatorKeyFile>..\..\codebase\csharpvsix\key.snk</AssemblyOriginatorKeyFile>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{82B43B9B-A64C-4715-B499-D71E9CA2BD60};{60DC8134-EBA5-43B8-BCC9-BB4BC16C2548};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
