--- a/samples/CPPCLI/reference/projects/theemptycppproject.vs2015.win32.v4_6_2.vcxproj
+++ b/samples/CPPCLI/reference/projects/theemptycppproject.vs2015.win32.v4_6_2.vcxproj
@@ -114,12 +114,7 @@
     </Link>
     <Lib>
       <TargetMachine>MachineX86</TargetMachine>
-    </Lib>
-    <Lib>
-      <SubSystem>
-      </SubSystem>
-    </Lib>
-    <Lib>
+      <SubSystem/>
       <LinkTimeCodeGeneration>false</LinkTimeCodeGeneration>
       <OutputFile>output\win32\debug\theemptycppproject.lib</OutputFile>
     </Lib>
@@ -181,12 +176,7 @@
     </Link>
     <Lib>
       <TargetMachine>MachineX86</TargetMachine>
-    </Lib>
-    <Lib>
-      <SubSystem>
-      </SubSystem>
-    </Lib>
-    <Lib>
+      <SubSystem/>
       <LinkTimeCodeGeneration>false</LinkTimeCodeGeneration>
       <OutputFile>output\win32\release\theemptycppproject.lib</OutputFile>
     </Lib>
