--- a/samples/CPPCLI/reference/projects/theemptycppproject.vs2017.win32.v4_6_2.vcxproj
+++ b/samples/CPPCLI/reference/projects/theemptycppproject.vs2017.win32.v4_6_2.vcxproj
@@ -116,12 +116,7 @@
     </Link>
     <Lib>
       <TargetMachine>MachineX86</TargetMachine>
-    </Lib>
-    <Lib>
-      <SubSystem>
-      </SubSystem>
-    </Lib>
-    <Lib>
+      <SubSystem/>
       <LinkTimeCodeGeneration>false</LinkTimeCodeGeneration>
       <OutputFile>output\win32\debug\theemptycppproject.lib</OutputFile>
     </Lib>
@@ -184,12 +179,7 @@
     </Link>
     <Lib>
       <TargetMachine>MachineX86</TargetMachine>
-    </Lib>
-    <Lib>
-      <SubSystem>
-      </SubSystem>
-    </Lib>
-    <Lib>
+      <SubSystem/>
       <LinkTimeCodeGeneration>false</LinkTimeCodeGeneration>
       <OutputFile>output\win32\release\theemptycppproject.lib</OutputFile>
     </Lib>
