[.NET Core] Get Sharpmake compiling in .NET Core * Currently untested so I don't accidentally destroy my local state * Moved VisualStudio specific code into a separate project so it can conditionally compile and pull in custom nuget packages * Fixed ProjectReferences for .NET Core to not include guid and name properties * Added optiont to disable auto generation of assembly properties * Adjusted intermediate directories to allow side by side compilation * Generate Directory.Build.Props file for .NET Core projects to hold BaseIntermediateOutputPath property since it is needed by NuGet restore prior to building projects. * Upgrade NUnit to latest version that includes .NET Core support.

--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@
 !Sharpmake.Application/Sharpmake.Application.csproj
 !Sharpmake.Generators/Sharpmake.Generators.csproj
 !Sharpmake.Platforms/Sharpmake.CommonPlatforms/Sharpmake.CommonPlatforms.csproj
+!Sharpmake.VisualStudio/Sharpmake.VisualStudio.csproj
 
 # Samples generated projects
 samples/*/package/*.androidproj
@@ -62,3 +63,4 @@ _ReSharper*/
 project.json
 project.lock.json
 Sharpmake.VC.db
+Directory.Build.props
