--- a/Sharpmake.VisualStudio/Sharpmake.VisualStudio.csproj
+++ b/Sharpmake.VisualStudio/Sharpmake.VisualStudio.csproj
@@ -5,16 +5,13 @@
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <PlatformTarget Condition=" '$(Platform)' == '' ">AnyCPU</PlatformTarget>
-    <ProjectGuid>{37CF3EE3-AFD3-3CC8-8F8E-B423292D491F}</ProjectGuid>
-    <OutputType>Exe</OutputType>
+    <ProjectGuid>{6D8FE1DC-434A-7A38-4090-D36562E6E696}</ProjectGuid>
+    <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Sharpmake.Application</RootNamespace>
-    <AssemblyName>Sharpmake.Application</AssemblyName>
+    <RootNamespace>Sharpmake.VisualStudio</RootNamespace>
+    <AssemblyName>Sharpmake.VisualStudio</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-  </PropertyGroup>
-  <PropertyGroup>
-    <ApplicationManifest>app.manifest</ApplicationManifest>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -22,12 +19,14 @@
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
     <OutputPath>..\bin\debug</OutputPath>
-    <IntermediateOutputPath>..\tmp\obj\v4_6_1_debug\sharpmake.application</IntermediateOutputPath>
-    <BaseIntermediateOutputPath>..\tmp\obj\v4_6_1_Debug\Sharpmake.Application</BaseIntermediateOutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
+    <IntermediateOutputPath>..\tmp\obj\v4_6_1_debug\sharpmake.visualstudio</IntermediateOutputPath>
+    <BaseIntermediateOutputPath>..\tmp\obj\v4_6_1_Debug\Sharpmake.VisualStudio</BaseIntermediateOutputPath>
+    <DocumentationFile>..\bin\Debug\Sharpmake.VisualStudio.xml</DocumentationFile>
+    <DefineConstants>DEBUG;TRACE;VISUAL_STUDIO_EXTENSION_ENABLED</DefineConstants>
     <WarningLevel>4</WarningLevel>
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
     <Prefer32Bit>false</Prefer32Bit>
+    <NoWarn>1570,1591</NoWarn>
     <LangVersion>6</LangVersion>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
@@ -36,45 +35,33 @@
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>..\bin\release</OutputPath>
-    <IntermediateOutputPath>..\tmp\obj\v4_6_1_release\sharpmake.application</IntermediateOutputPath>
-    <BaseIntermediateOutputPath>..\tmp\obj\v4_6_1_Release\Sharpmake.Application</BaseIntermediateOutputPath>
-    <DefineConstants>TRACE</DefineConstants>
+    <IntermediateOutputPath>..\tmp\obj\v4_6_1_release\sharpmake.visualstudio</IntermediateOutputPath>
+    <BaseIntermediateOutputPath>..\tmp\obj\v4_6_1_Release\Sharpmake.VisualStudio</BaseIntermediateOutputPath>
+    <DocumentationFile>..\bin\Release\Sharpmake.VisualStudio.xml</DocumentationFile>
+    <DefineConstants>TRACE;VISUAL_STUDIO_EXTENSION_ENABLED</DefineConstants>
     <WarningLevel>4</WarningLevel>
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
     <Prefer32Bit>false</Prefer32Bit>
+    <NoWarn>1570,1591</NoWarn>
     <LangVersion>6</LangVersion>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Microsoft.Build.Utilities.v4.0">
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System">
+      <Private>False</Private>
+    </Reference>
+    <Reference Include="System.Windows.Forms">
       <Private>False</Private>
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CommandLineArguments.cs" />
-    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="VisualStudio.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="app.config" />
-    <None Include="app.manifest" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\Sharpmake.Generators\Sharpmake.Generators.csproj">
-      <Project>{844f66de-b015-340e-720a-8e158b517e93}</Project>
-      <Name>Sharpmake.Generators</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Sharpmake.Platforms\Sharpmake.CommonPlatforms\Sharpmake.CommonPlatforms.csproj">
-      <Project>{3b476462-28e6-4640-4257-7942657699ed}</Project>
-      <Name>Sharpmake.CommonPlatforms</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Sharpmake.VisualStudio\Sharpmake.VisualStudio.csproj">
-      <Project>{6d8fe1dc-434a-7a38-4090-d36562e6e696}</Project>
-      <Name>Sharpmake.VisualStudio</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Sharpmake\Sharpmake.csproj">
-      <Project>{15f793c7-9e88-64a9-591c-7244fcc6b771}</Project>
-      <Name>Sharpmake</Name>
-    </ProjectReference>
+    <PackageReference Include="Microsoft.VisualStudio.Setup.Configuration.Interop" Version="1.16.30" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
