[.NET Core] Get Sharpmake compiling in .NET Core * Currently untested so I don't accidentally destroy my local state * Moved VisualStudio specific code into a separate project so it can conditionally compile and pull in custom nuget packages * Fixed ProjectReferences for .NET Core to not include guid and name properties * Added optiont to disable auto generation of assembly properties * Adjusted intermediate directories to allow side by side compilation * Generate Directory.Build.Props file for .NET Core projects to hold BaseIntermediateOutputPath property since it is needed by NuGet restore prior to building projects. * Upgrade NUnit to latest version that includes .NET Core support.

--- a/Sharpmake/Sharpmake.csproj
+++ b/Sharpmake/Sharpmake.csproj
@@ -131,5 +131,9 @@
       <Name>Sharpmake.VisualStudio</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="3.1.0" />
+    <PackageReference Include="Microsoft.DiaSymReader.Native" Version="1.7.0" />
+  </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
