[.NET Core] Add ability to bootstrap and update sample projects * Added more standard assemblies to get sample projects running * Fixes to get samples running (all path related) * Tested on windows and linux. Mac boostrap included but can't be tested locally.

--- a/.gitignore
+++ b/.gitignore
@@ -5,11 +5,11 @@
 *.sln
 *.csproj
 # but negate for the following, mandatorily versionned
-!Sharpmake/Sharpmake.csproj
-!Sharpmake.Application/Sharpmake.Application.csproj
-!Sharpmake.Generators/Sharpmake.Generators.csproj
-!Sharpmake.Platforms/Sharpmake.CommonPlatforms/Sharpmake.CommonPlatforms.csproj
-!Sharpmake.VisualStudio/Sharpmake.VisualStudio.csproj
+!Sharpmake/Sharpmake*.csproj
+!Sharpmake.Application/Sharpmake.Application*.csproj
+!Sharpmake.Generators/Sharpmake.Generators*.csproj
+!Sharpmake.Platforms/Sharpmake.CommonPlatforms/Sharpmake.CommonPlatforms*.csproj
+!Sharpmake.VisualStudio/Sharpmake.VisualStudio*.csproj
 
 # Samples generated projects
 samples/*/package/*.androidproj
