--- a/samples/QTFileCustomBuild/reference/projects/qtfilecustombuild_vs2017_win64.vcxproj
+++ b/samples/QTFileCustomBuild/reference/projects/qtfilecustombuild_vs2017_win64.vcxproj
@@ -359,85 +359,85 @@
   <ItemGroup>
     <CustomBuild Include="..\codebase\exec.qrc">
       <Message Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Rcc Debug exec.qrc</Message>
-      <Command Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">..\qt\5.9.2\msvc2017_64\bin\rcc.exe -name exec ..\codebase\exec.qrc -o obj\qtfilecustombuild\qt\qrc_exec.cpp&#x0D;&#x0A;</Command>
+      <Command Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">"..\qt\5.9.2\msvc2017_64\bin\rcc.exe" -name exec ..\codebase\exec.qrc -o obj\qtfilecustombuild\qt\qrc_exec.cpp&#x0D;&#x0A;</Command>
       <AdditionalInputs Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">..\qt\5.9.2\msvc2017_64\bin\rcc.exe</AdditionalInputs>
       <Outputs Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">obj\qtfilecustombuild\qt\qrc_exec.cpp</Outputs>
       <Message Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Rcc Release exec.qrc</Message>
-      <Command Condition="'$(Configuration)|$(Platform)'=='Release|x64'">..\qt\5.9.2\msvc2017_64\bin\rcc.exe -name exec ..\codebase\exec.qrc -o obj\qtfilecustombuild\qt\qrc_exec.cpp&#x0D;&#x0A;</Command>
+      <Command Condition="'$(Configuration)|$(Platform)'=='Release|x64'">"..\qt\5.9.2\msvc2017_64\bin\rcc.exe" -name exec ..\codebase\exec.qrc -o obj\qtfilecustombuild\qt\qrc_exec.cpp&#x0D;&#x0A;</Command>
       <AdditionalInputs Condition="'$(Configuration)|$(Platform)'=='Release|x64'">..\qt\5.9.2\msvc2017_64\bin\rcc.exe</AdditionalInputs>
       <Outputs Condition="'$(Configuration)|$(Platform)'=='Release|x64'">obj\qtfilecustombuild\qt\qrc_exec.cpp</Outputs>
       <Message Condition="'$(Configuration)|$(Platform)'=='Retail|x64'">Rcc Retail exec.qrc</Message>
-      <Command Condition="'$(Configuration)|$(Platform)'=='Retail|x64'">..\qt\5.9.2\msvc2017_64\bin\rcc.exe -name exec ..\codebase\exec.qrc -o obj\qtfilecustombuild\qt\qrc_exec.cpp&#x0D;&#x0A;</Command>
+      <Command Condition="'$(Configuration)|$(Platform)'=='Retail|x64'">"..\qt\5.9.2\msvc2017_64\bin\rcc.exe" -name exec ..\codebase\exec.qrc -o obj\qtfilecustombuild\qt\qrc_exec.cpp&#x0D;&#x0A;</Command>
       <AdditionalInputs Condition="'$(Configuration)|$(Platform)'=='Retail|x64'">..\qt\5.9.2\msvc2017_64\bin\rcc.exe</AdditionalInputs>
       <Outputs Condition="'$(Configuration)|$(Platform)'=='Retail|x64'">obj\qtfilecustombuild\qt\qrc_exec.cpp</Outputs>
     </CustomBuild>
     <CustomBuild Include="..\codebase\floatanglespinbox.h">
       <Message Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Moc Debug floatanglespinbox.h</Message>
-      <Command Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">..\qt\5.9.2\msvc2017_64\bin\moc.exe -D_MSC_VER=1910 -DQT_SHARED -DWIN32 -I..\qt\5.9.2\msvc2017_64\include -Iobj\qtfilecustombuild\qt -Iobj\win64\qt\debug -f..\codebase\floatanglespinbox.h -fstdafx.h ..\codebase\floatanglespinbox.h -o obj\win64\qt\debug\moc_floatanglespinbox.cpp&#x0D;&#x0A;</Command>
+      <Command Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">"..\qt\5.9.2\msvc2017_64\bin\moc.exe" -D_MSC_VER=1910 -DQT_SHARED -DWIN32 -I..\qt\5.9.2\msvc2017_64\include -Iobj\qtfilecustombuild\qt -Iobj\win64\qt\debug -f..\codebase\floatanglespinbox.h -fstdafx.h ..\codebase\floatanglespinbox.h -o obj\win64\qt\debug\moc_floatanglespinbox.cpp&#x0D;&#x0A;</Command>
       <AdditionalInputs Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">..\qt\5.9.2\msvc2017_64\bin\moc.exe</AdditionalInputs>
       <Outputs Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">obj\win64\qt\debug\moc_floatanglespinbox.cpp</Outputs>
       <Message Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Moc Release floatanglespinbox.h</Message>
-      <Command Condition="'$(Configuration)|$(Platform)'=='Release|x64'">..\qt\5.9.2\msvc2017_64\bin\moc.exe -D_MSC_VER=1910 -DQT_NO_DEBUG -DQT_SHARED -DWIN32 -I..\qt\5.9.2\msvc2017_64\include -Iobj\qtfilecustombuild\qt -Iobj\win64\qt\release -f..\codebase\floatanglespinbox.h -fstdafx.h ..\codebase\floatanglespinbox.h -o obj\win64\qt\release\moc_floatanglespinbox.cpp&#x0D;&#x0A;</Command>
+      <Command Condition="'$(Configuration)|$(Platform)'=='Release|x64'">"..\qt\5.9.2\msvc2017_64\bin\moc.exe" -D_MSC_VER=1910 -DQT_NO_DEBUG -DQT_SHARED -DWIN32 -I..\qt\5.9.2\msvc2017_64\include -Iobj\qtfilecustombuild\qt -Iobj\win64\qt\release -f..\codebase\floatanglespinbox.h -fstdafx.h ..\codebase\floatanglespinbox.h -o obj\win64\qt\release\moc_floatanglespinbox.cpp&#x0D;&#x0A;</Command>
       <AdditionalInputs Condition="'$(Configuration)|$(Platform)'=='Release|x64'">..\qt\5.9.2\msvc2017_64\bin\moc.exe</AdditionalInputs>
       <Outputs Condition="'$(Configuration)|$(Platform)'=='Release|x64'">obj\win64\qt\release\moc_floatanglespinbox.cpp</Outputs>
       <Message Condition="'$(Configuration)|$(Platform)'=='Retail|x64'">Moc Retail floatanglespinbox.h</Message>
-      <Command Condition="'$(Configuration)|$(Platform)'=='Retail|x64'">..\qt\5.9.2\msvc2017_64\bin\moc.exe -D_MSC_VER=1910 -DQT_NO_DEBUG -DQT_SHARED -DWIN32 -I..\qt\5.9.2\msvc2017_64\include -Iobj\qtfilecustombuild\qt -Iobj\win64\qt\retail -f..\codebase\floatanglespinbox.h -fstdafx.h ..\codebase\floatanglespinbox.h -o obj\win64\qt\retail\moc_floatanglespinbox.cpp&#x0D;&#x0A;</Command>
+      <Command Condition="'$(Configuration)|$(Platform)'=='Retail|x64'">"..\qt\5.9.2\msvc2017_64\bin\moc.exe" -D_MSC_VER=1910 -DQT_NO_DEBUG -DQT_SHARED -DWIN32 -I..\qt\5.9.2\msvc2017_64\include -Iobj\qtfilecustombuild\qt -Iobj\win64\qt\retail -f..\codebase\floatanglespinbox.h -fstdafx.h ..\codebase\floatanglespinbox.h -o obj\win64\qt\retail\moc_floatanglespinbox.cpp&#x0D;&#x0A;</Command>
       <AdditionalInputs Condition="'$(Configuration)|$(Platform)'=='Retail|x64'">..\qt\5.9.2\msvc2017_64\bin\moc.exe</AdditionalInputs>
       <Outputs Condition="'$(Configuration)|$(Platform)'=='Retail|x64'">obj\win64\qt\retail\moc_floatanglespinbox.cpp</Outputs>
     </CustomBuild>
     <CustomBuild Include="..\codebase\floatcosanglespinbox.h">
       <Message Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Moc Debug floatcosanglespinbox.h</Message>
-      <Command Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">..\qt\5.9.2\msvc2017_64\bin\moc.exe -D_MSC_VER=1910 -DQT_SHARED -DWIN32 -I..\qt\5.9.2\msvc2017_64\include -Iobj\qtfilecustombuild\qt -Iobj\win64\qt\debug -f..\codebase\floatcosanglespinbox.h -fstdafx.h ..\codebase\floatcosanglespinbox.h -o obj\win64\qt\debug\moc_floatcosanglespinbox.cpp&#x0D;&#x0A;</Command>
+      <Command Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">"..\qt\5.9.2\msvc2017_64\bin\moc.exe" -D_MSC_VER=1910 -DQT_SHARED -DWIN32 -I..\qt\5.9.2\msvc2017_64\include -Iobj\qtfilecustombuild\qt -Iobj\win64\qt\debug -f..\codebase\floatcosanglespinbox.h -fstdafx.h ..\codebase\floatcosanglespinbox.h -o obj\win64\qt\debug\moc_floatcosanglespinbox.cpp&#x0D;&#x0A;</Command>
       <AdditionalInputs Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">..\qt\5.9.2\msvc2017_64\bin\moc.exe</AdditionalInputs>
       <Outputs Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">obj\win64\qt\debug\moc_floatcosanglespinbox.cpp</Outputs>
       <Message Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Moc Release floatcosanglespinbox.h</Message>
-      <Command Condition="'$(Configuration)|$(Platform)'=='Release|x64'">..\qt\5.9.2\msvc2017_64\bin\moc.exe -D_MSC_VER=1910 -DQT_NO_DEBUG -DQT_SHARED -DWIN32 -I..\qt\5.9.2\msvc2017_64\include -Iobj\qtfilecustombuild\qt -Iobj\win64\qt\release -f..\codebase\floatcosanglespinbox.h -fstdafx.h ..\codebase\floatcosanglespinbox.h -o obj\win64\qt\release\moc_floatcosanglespinbox.cpp&#x0D;&#x0A;</Command>
+      <Command Condition="'$(Configuration)|$(Platform)'=='Release|x64'">"..\qt\5.9.2\msvc2017_64\bin\moc.exe" -D_MSC_VER=1910 -DQT_NO_DEBUG -DQT_SHARED -DWIN32 -I..\qt\5.9.2\msvc2017_64\include -Iobj\qtfilecustombuild\qt -Iobj\win64\qt\release -f..\codebase\floatcosanglespinbox.h -fstdafx.h ..\codebase\floatcosanglespinbox.h -o obj\win64\qt\release\moc_floatcosanglespinbox.cpp&#x0D;&#x0A;</Command>
       <AdditionalInputs Condition="'$(Configuration)|$(Platform)'=='Release|x64'">..\qt\5.9.2\msvc2017_64\bin\moc.exe</AdditionalInputs>
       <Outputs Condition="'$(Configuration)|$(Platform)'=='Release|x64'">obj\win64\qt\release\moc_floatcosanglespinbox.cpp</Outputs>
       <Message Condition="'$(Configuration)|$(Platform)'=='Retail|x64'">Moc Retail floatcosanglespinbox.h</Message>
-      <Command Condition="'$(Configuration)|$(Platform)'=='Retail|x64'">..\qt\5.9.2\msvc2017_64\bin\moc.exe -D_MSC_VER=1910 -DQT_NO_DEBUG -DQT_SHARED -DWIN32 -I..\qt\5.9.2\msvc2017_64\include -Iobj\qtfilecustombuild\qt -Iobj\win64\qt\retail -f..\codebase\floatcosanglespinbox.h -fstdafx.h ..\codebase\floatcosanglespinbox.h -o obj\win64\qt\retail\moc_floatcosanglespinbox.cpp&#x0D;&#x0A;</Command>
+      <Command Condition="'$(Configuration)|$(Platform)'=='Retail|x64'">"..\qt\5.9.2\msvc2017_64\bin\moc.exe" -D_MSC_VER=1910 -DQT_NO_DEBUG -DQT_SHARED -DWIN32 -I..\qt\5.9.2\msvc2017_64\include -Iobj\qtfilecustombuild\qt -Iobj\win64\qt\retail -f..\codebase\floatcosanglespinbox.h -fstdafx.h ..\codebase\floatcosanglespinbox.h -o obj\win64\qt\retail\moc_floatcosanglespinbox.cpp&#x0D;&#x0A;</Command>
       <AdditionalInputs Condition="'$(Configuration)|$(Platform)'=='Retail|x64'">..\qt\5.9.2\msvc2017_64\bin\moc.exe</AdditionalInputs>
       <Outputs Condition="'$(Configuration)|$(Platform)'=='Retail|x64'">obj\win64\qt\retail\moc_floatcosanglespinbox.cpp</Outputs>
     </CustomBuild>
     <CustomBuild Include="..\codebase\privatewidget.h">
       <Message Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Moc Debug privatewidget.h</Message>
-      <Command Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">..\qt\5.9.2\msvc2017_64\bin\moc.exe -D_MSC_VER=1910 -DQT_SHARED -DWIN32 -I..\qt\5.9.2\msvc2017_64\include -Iobj\qtfilecustombuild\qt -Iobj\win64\qt\debug -f..\codebase\privatewidget.h -fstdafx.h ..\codebase\privatewidget.h -o obj\win64\qt\debug\moc_privatewidget.cpp&#x0D;&#x0A;</Command>
+      <Command Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">"..\qt\5.9.2\msvc2017_64\bin\moc.exe" -D_MSC_VER=1910 -DQT_SHARED -DWIN32 -I..\qt\5.9.2\msvc2017_64\include -Iobj\qtfilecustombuild\qt -Iobj\win64\qt\debug -f..\codebase\privatewidget.h -fstdafx.h ..\codebase\privatewidget.h -o obj\win64\qt\debug\moc_privatewidget.cpp&#x0D;&#x0A;</Command>
       <AdditionalInputs Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">..\qt\5.9.2\msvc2017_64\bin\moc.exe</AdditionalInputs>
       <Outputs Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">obj\win64\qt\debug\moc_privatewidget.cpp</Outputs>
       <Message Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Moc Release privatewidget.h</Message>
-      <Command Condition="'$(Configuration)|$(Platform)'=='Release|x64'">..\qt\5.9.2\msvc2017_64\bin\moc.exe -D_MSC_VER=1910 -DQT_NO_DEBUG -DQT_SHARED -DWIN32 -I..\qt\5.9.2\msvc2017_64\include -Iobj\qtfilecustombuild\qt -Iobj\win64\qt\release -f..\codebase\privatewidget.h -fstdafx.h ..\codebase\privatewidget.h -o obj\win64\qt\release\moc_privatewidget.cpp&#x0D;&#x0A;</Command>
+      <Command Condition="'$(Configuration)|$(Platform)'=='Release|x64'">"..\qt\5.9.2\msvc2017_64\bin\moc.exe" -D_MSC_VER=1910 -DQT_NO_DEBUG -DQT_SHARED -DWIN32 -I..\qt\5.9.2\msvc2017_64\include -Iobj\qtfilecustombuild\qt -Iobj\win64\qt\release -f..\codebase\privatewidget.h -fstdafx.h ..\codebase\privatewidget.h -o obj\win64\qt\release\moc_privatewidget.cpp&#x0D;&#x0A;</Command>
       <AdditionalInputs Condition="'$(Configuration)|$(Platform)'=='Release|x64'">..\qt\5.9.2\msvc2017_64\bin\moc.exe</AdditionalInputs>
       <Outputs Condition="'$(Configuration)|$(Platform)'=='Release|x64'">obj\win64\qt\release\moc_privatewidget.cpp</Outputs>
       <Message Condition="'$(Configuration)|$(Platform)'=='Retail|x64'">Moc Retail privatewidget.h</Message>
-      <Command Condition="'$(Configuration)|$(Platform)'=='Retail|x64'">..\qt\5.9.2\msvc2017_64\bin\moc.exe -D_MSC_VER=1910 -DQT_NO_DEBUG -DQT_SHARED -DWIN32 -I..\qt\5.9.2\msvc2017_64\include -Iobj\qtfilecustombuild\qt -Iobj\win64\qt\retail -f..\codebase\privatewidget.h -fstdafx.h ..\codebase\privatewidget.h -o obj\win64\qt\retail\moc_privatewidget.cpp&#x0D;&#x0A;</Command>
+      <Command Condition="'$(Configuration)|$(Platform)'=='Retail|x64'">"..\qt\5.9.2\msvc2017_64\bin\moc.exe" -D_MSC_VER=1910 -DQT_NO_DEBUG -DQT_SHARED -DWIN32 -I..\qt\5.9.2\msvc2017_64\include -Iobj\qtfilecustombuild\qt -Iobj\win64\qt\retail -f..\codebase\privatewidget.h -fstdafx.h ..\codebase\privatewidget.h -o obj\win64\qt\retail\moc_privatewidget.cpp&#x0D;&#x0A;</Command>
       <AdditionalInputs Condition="'$(Configuration)|$(Platform)'=='Retail|x64'">..\qt\5.9.2\msvc2017_64\bin\moc.exe</AdditionalInputs>
       <Outputs Condition="'$(Configuration)|$(Platform)'=='Retail|x64'">obj\win64\qt\retail\moc_privatewidget.cpp</Outputs>
     </CustomBuild>
     <CustomBuild Include="..\codebase\privatewidget.ui">
       <Message Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Uic Debug privatewidget.ui</Message>
-      <Command Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">..\qt\5.9.2\msvc2017_64\bin\uic.exe ..\codebase\privatewidget.ui -o obj\qtfilecustombuild\qt\ui_privatewidget.h&#x0D;&#x0A;</Command>
+      <Command Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">"..\qt\5.9.2\msvc2017_64\bin\uic.exe" ..\codebase\privatewidget.ui -o obj\qtfilecustombuild\qt\ui_privatewidget.h&#x0D;&#x0A;</Command>
       <AdditionalInputs Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">..\qt\5.9.2\msvc2017_64\bin\uic.exe</AdditionalInputs>
       <Outputs Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">obj\qtfilecustombuild\qt\ui_privatewidget.h</Outputs>
       <Message Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Uic Release privatewidget.ui</Message>
-      <Command Condition="'$(Configuration)|$(Platform)'=='Release|x64'">..\qt\5.9.2\msvc2017_64\bin\uic.exe ..\codebase\privatewidget.ui -o obj\qtfilecustombuild\qt\ui_privatewidget.h&#x0D;&#x0A;</Command>
+      <Command Condition="'$(Configuration)|$(Platform)'=='Release|x64'">"..\qt\5.9.2\msvc2017_64\bin\uic.exe" ..\codebase\privatewidget.ui -o obj\qtfilecustombuild\qt\ui_privatewidget.h&#x0D;&#x0A;</Command>
       <AdditionalInputs Condition="'$(Configuration)|$(Platform)'=='Release|x64'">..\qt\5.9.2\msvc2017_64\bin\uic.exe</AdditionalInputs>
       <Outputs Condition="'$(Configuration)|$(Platform)'=='Release|x64'">obj\qtfilecustombuild\qt\ui_privatewidget.h</Outputs>
       <Message Condition="'$(Configuration)|$(Platform)'=='Retail|x64'">Uic Retail privatewidget.ui</Message>
-      <Command Condition="'$(Configuration)|$(Platform)'=='Retail|x64'">..\qt\5.9.2\msvc2017_64\bin\uic.exe ..\codebase\privatewidget.ui -o obj\qtfilecustombuild\qt\ui_privatewidget.h&#x0D;&#x0A;</Command>
+      <Command Condition="'$(Configuration)|$(Platform)'=='Retail|x64'">"..\qt\5.9.2\msvc2017_64\bin\uic.exe" ..\codebase\privatewidget.ui -o obj\qtfilecustombuild\qt\ui_privatewidget.h&#x0D;&#x0A;</Command>
       <AdditionalInputs Condition="'$(Configuration)|$(Platform)'=='Retail|x64'">..\qt\5.9.2\msvc2017_64\bin\uic.exe</AdditionalInputs>
       <Outputs Condition="'$(Configuration)|$(Platform)'=='Retail|x64'">obj\qtfilecustombuild\qt\ui_privatewidget.h</Outputs>
     </CustomBuild>
     <CustomBuild Include="obj\qtfilecustombuild\qt\privatewidget.inl">
       <Message Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Moc Debug privatewidget.cpp</Message>
-      <Command Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">..\qt\5.9.2\msvc2017_64\bin\moc.exe -D_MSC_VER=1910 -DQT_SHARED -DWIN32 -I..\qt\5.9.2\msvc2017_64\include -Iobj\qtfilecustombuild\qt -Iobj\win64\qt\debug  &#x0D;&#x0A;</Command>
+      <Command Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">"..\qt\5.9.2\msvc2017_64\bin\moc.exe" -D_MSC_VER=1910 -DQT_SHARED -DWIN32 -I..\qt\5.9.2\msvc2017_64\include -Iobj\qtfilecustombuild\qt -Iobj\win64\qt\debug  &#x0D;&#x0A;</Command>
       <AdditionalInputs Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">..\codebase\privatewidget.cpp;..\qt\5.9.2\msvc2017_64\bin\moc.exe</AdditionalInputs>
       <Outputs Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">obj\win64\qt\debug\privatewidget.moc</Outputs>
       <Message Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Moc Release privatewidget.cpp</Message>
-      <Command Condition="'$(Configuration)|$(Platform)'=='Release|x64'">..\qt\5.9.2\msvc2017_64\bin\moc.exe -D_MSC_VER=1910 -DQT_NO_DEBUG -DQT_SHARED -DWIN32 -I..\qt\5.9.2\msvc2017_64\include -Iobj\qtfilecustombuild\qt -Iobj\win64\qt\release  &#x0D;&#x0A;</Command>
+      <Command Condition="'$(Configuration)|$(Platform)'=='Release|x64'">"..\qt\5.9.2\msvc2017_64\bin\moc.exe" -D_MSC_VER=1910 -DQT_NO_DEBUG -DQT_SHARED -DWIN32 -I..\qt\5.9.2\msvc2017_64\include -Iobj\qtfilecustombuild\qt -Iobj\win64\qt\release  &#x0D;&#x0A;</Command>
       <AdditionalInputs Condition="'$(Configuration)|$(Platform)'=='Release|x64'">..\codebase\privatewidget.cpp;..\qt\5.9.2\msvc2017_64\bin\moc.exe</AdditionalInputs>
       <Outputs Condition="'$(Configuration)|$(Platform)'=='Release|x64'">obj\win64\qt\release\privatewidget.moc</Outputs>
       <Message Condition="'$(Configuration)|$(Platform)'=='Retail|x64'">Moc Retail privatewidget.cpp</Message>
-      <Command Condition="'$(Configuration)|$(Platform)'=='Retail|x64'">..\qt\5.9.2\msvc2017_64\bin\moc.exe -D_MSC_VER=1910 -DQT_NO_DEBUG -DQT_SHARED -DWIN32 -I..\qt\5.9.2\msvc2017_64\include -Iobj\qtfilecustombuild\qt -Iobj\win64\qt\retail  &#x0D;&#x0A;</Command>
+      <Command Condition="'$(Configuration)|$(Platform)'=='Retail|x64'">"..\qt\5.9.2\msvc2017_64\bin\moc.exe" -D_MSC_VER=1910 -DQT_NO_DEBUG -DQT_SHARED -DWIN32 -I..\qt\5.9.2\msvc2017_64\include -Iobj\qtfilecustombuild\qt -Iobj\win64\qt\retail  &#x0D;&#x0A;</Command>
       <AdditionalInputs Condition="'$(Configuration)|$(Platform)'=='Retail|x64'">..\codebase\privatewidget.cpp;..\qt\5.9.2\msvc2017_64\bin\moc.exe</AdditionalInputs>
       <Outputs Condition="'$(Configuration)|$(Platform)'=='Retail|x64'">obj\win64\qt\retail\privatewidget.moc</Outputs>
     </CustomBuild>
