[NetCore] Upgrade to .NET Core 3.0 * Add support for 3.1 * Many adjustments and fixes to command line to work with 3.0 commits fully to it * Moved GenerateAssemblyInfo into global properties so additional platforms will still pick it up * Removed PublishSingleFile since it was causing build issues, added externally to publish option * Replaced double quotes in sharpmake invocations with single quotes for cross platform compatibility * Fixed issues with DebugProjectGenerator source file info not available in published builds * Make DebugProjectGenerator adapt to the framework that sharpmake was generated with (.net core still needs work to generate launch parameters)

--- a/Sharpmake.Application/Sharpmake.Application_Core.csproj
+++ b/Sharpmake.Application/Sharpmake.Application_Core.csproj
@@ -7,11 +7,11 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Sharpmake.Application</RootNamespace>
     <AssemblyName>Sharpmake.Application</AssemblyName>
-    <TargetFramework>netcoreapp2.0</TargetFramework>
+    <TargetFramework>netcoreapp3.0</TargetFramework>
     <FileAlignment>512</FileAlignment>
-    <PublishSingleFile>true</PublishSingleFile>
     <PublishTrimmed>true</PublishTrimmed>
     <EnableDefaultItems>false</EnableDefaultItems>
+    <GenerateAssemblyInfo>False</GenerateAssemblyInfo>
   </PropertyGroup>
   <PropertyGroup>
     <ApplicationManifest>app.manifest</ApplicationManifest>
@@ -22,13 +22,12 @@
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
     <OutputPath>..\bin\debug</OutputPath>
-    <IntermediateOutputPath>..\tmp\obj\netcore2_debug\sharpmake.application</IntermediateOutputPath>
+    <IntermediateOutputPath>..\tmp\obj\netcore3_0_debug\sharpmake.application</IntermediateOutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <WarningLevel>4</WarningLevel>
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
     <Prefer32Bit>false</Prefer32Bit>
     <LangVersion>6</LangVersion>
-    <GenerateAssemblyInfo>False</GenerateAssemblyInfo>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -36,13 +35,12 @@
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>..\bin\release</OutputPath>
-    <IntermediateOutputPath>..\tmp\obj\netcore2_release\sharpmake.application</IntermediateOutputPath>
+    <IntermediateOutputPath>..\tmp\obj\netcore3_0_release\sharpmake.application</IntermediateOutputPath>
     <DefineConstants>TRACE</DefineConstants>
     <WarningLevel>4</WarningLevel>
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
     <Prefer32Bit>false</Prefer32Bit>
     <LangVersion>6</LangVersion>
-    <GenerateAssemblyInfo>False</GenerateAssemblyInfo>
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="CommandLineArguments.cs" />
