--- a/Sharpmake.VisualStudio/Sharpmake.VisualStudio_Core.csproj
+++ b/Sharpmake.VisualStudio/Sharpmake.VisualStudio_Core.csproj
@@ -7,9 +7,10 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Sharpmake.VisualStudio</RootNamespace>
     <AssemblyName>Sharpmake.VisualStudio</AssemblyName>
-    <TargetFramework>netcoreapp2.0</TargetFramework>
+    <TargetFramework>netcoreapp3.0</TargetFramework>
     <FileAlignment>512</FileAlignment>
     <EnableDefaultItems>false</EnableDefaultItems>
+    <GenerateAssemblyInfo>False</GenerateAssemblyInfo>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -17,7 +18,7 @@
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
     <OutputPath>..\bin\debug</OutputPath>
-    <IntermediateOutputPath>..\tmp\obj\netcore2_debug\sharpmake.visualstudio</IntermediateOutputPath>
+    <IntermediateOutputPath>..\tmp\obj\netcore3_0_debug\sharpmake.visualstudio</IntermediateOutputPath>
     <DocumentationFile>..\bin\Debug\Sharpmake.VisualStudio.xml</DocumentationFile>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <WarningLevel>4</WarningLevel>
@@ -25,7 +26,6 @@
     <Prefer32Bit>false</Prefer32Bit>
     <NoWarn>1570,1591</NoWarn>
     <LangVersion>6</LangVersion>
-    <GenerateAssemblyInfo>False</GenerateAssemblyInfo>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -33,7 +33,7 @@
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>..\bin\release</OutputPath>
-    <IntermediateOutputPath>..\tmp\obj\netcore2_release\sharpmake.visualstudio</IntermediateOutputPath>
+    <IntermediateOutputPath>..\tmp\obj\netcore3_0_release\sharpmake.visualstudio</IntermediateOutputPath>
     <DocumentationFile>..\bin\Release\Sharpmake.VisualStudio.xml</DocumentationFile>
     <DefineConstants>TRACE</DefineConstants>
     <WarningLevel>4</WarningLevel>
@@ -41,7 +41,6 @@
     <Prefer32Bit>false</Prefer32Bit>
     <NoWarn>1570,1591</NoWarn>
     <LangVersion>6</LangVersion>
-    <GenerateAssemblyInfo>False</GenerateAssemblyInfo>
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
